--- a/Demo/Demo.csproj
+++ b/Demo/Demo.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
@@ -30,9 +30,9 @@
     <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.0.4" />
     <PackageReference Include="Avalonia.Themes.Simple" Version="11.0.4" />
-    <PackageReference Include="Stimulsoft.Reports.Avalonia" Version="2023.4.1" />
-    <PackageReference Include="Stimulsoft.Reports.Engine.NetCore" Version="2023.4.1" />
-    <PackageReference Include="Stimulsoft.Svg.NetCore" Version="2023.4.1" />
+    <PackageReference Include="Stimulsoft.Reports.Avalonia" Version="2023.4.2" />
+    <PackageReference Include="Stimulsoft.Reports.Engine.NetCore" Version="2023.4.2" />
+    <PackageReference Include="Stimulsoft.Svg.NetCore" Version="2023.4.2" />
     <PackageReference Include="XamlNameReferenceGenerator" Version="1.6.1" />
   </ItemGroup>
   <ItemGroup>
