--- a/NET 6.0/Customizing the Viewer/Customizing the Viewer.csproj
+++ b/NET 6.0/Customizing the Viewer/Customizing the Viewer.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
@@ -21,6 +21,6 @@
     <PackageReference Include="Avalonia.Themes.Fluent" Version="11.1.3" />
     <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.1.3" />
-    <PackageReference Include="Stimulsoft.Reports.Avalonia" Version="2024.4.1" />
+    <PackageReference Include="Stimulsoft.Reports.Avalonia" Version="2024.4.2" />
   </ItemGroup>
 </Project>
